# winctl

./: .gitignore  README.md
.claude-plugin/: marketplace.json
skills/oneocr/: SKILL.md
skills/screenshot/: SKILL.md
skills/winctl/: SKILL.md
src/oneocr/: Cargo.toml  LICENSE  README.md
src/oneocr/src/: engine.rs  error.rs  ffi.rs  format.rs  lib.rs  main.rs  types.rs
src/oneocr/tests/: cli.rs  realworld.rs
src/screenshot/: Program.cs  README.md  Screenshot.csproj
src/winctl/: Program.cs  README.md  winctl.csproj
