[package]
name = "oneocr"
version = "0.1.0"
edition = "2021"
description = "CLI and library for OCR using Windows Snipping Tool's oneocr engine"
license = "MIT"
repository = "https://github.com/Bot-Dev-RPA/oneocr"
readme = "README.md"

[dependencies]
libloading = "0.8"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff", "webp"] }
arboard = { version = "3", features = ["image-data"] }
